--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.security.user.name=user
+spring.security.user.roles=admin
+spring.security.user.password=123
 
 
 # ===============================
