--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=nam155122
+spring.datasource.password=
 
 
 # ===============================
@@ -19,6 +19,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 server.port=8081
-#upload.path=E:/store/image
-upload.path=/Users/nguyennam/Downloads/image
+upload.path=E:/store/image
+#upload.path=/Users/nguyennam/Downloads/image
 
