--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 server.port=8081
-upload.path=E:/store/image
+#upload.path=E:/store/image
 
-#upload.path=/Users/nguyennam/Downloads/image
+upload.path=/Users/tuangh/Downloads/image
 
